# SRO-PK2-Workbench

./: .gitignore  CMakeLists.txt  README.md
apps/pk2cli/: main.cpp
apps/pk2win/: main.cpp  pk2win.rc  resource.h
docs/: reverse-engineering-notes.md
include/pk2/: archive.h  crypto.h  path.h
src/pk2core/: archive.cpp  crypto.cpp  path.cpp
tests/: pk2core_tests.cpp
